# open-meteo-weather-cli-rust

./: Cargo.toml  readme.md
src/: main.rs
