[package]
name = "weather-shane-moloney"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitfailure = "0.5.1"
reqwest = { version = "0.11.17", features = ["json"] }
serde = "1.0.114"
serde_json = "1.0.56"
serde_derive = "1.0.114"
tokio = {version = "1.28.1", features = ["full"]}
clap = { version = "4.2.7", features = ["derive"] }
chrono = "0.4.24"
